# VoxaEngine

./: .gitattributes  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  DartConfiguration.tcl  README.md  build.ninja  cmake_install.cmake  imgui.ini  vcpkg.json
Apps/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Scene.h  main.cpp
Apps/Editor/Generation/: ChunkGenerator.cpp  ChunkGenerator.h  VoxelObjLoader.cpp  VoxelObjLoader.h  VoxelRegistryGenerator.h
Apps/Editor/Input/: InputHandler.cpp  MouseDataHandler.h
Apps/Editor/Rendering/: ImGuiRenderer.cpp  ImGuiRenderer.h
Apps/Editor/Voxels/: SolidSimpleVoxel.cpp  SolidSimpleVoxel.h
Apps/Game/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Apps/Game/Input/: InputHandler.cpp
Apps/Game/Rendering/: ImGuiRenderer.cpp  ImGuiRenderer.h
Apps/Game/Sources/SRC/: Rock-low-detail.aseprite
Apps/Game/VoxelObject/Player/: Player.cpp
Apps/Game/World/: ChunkGenerator.cpp  ChunkGenerator.h
Apps/Game/World/ParticleGenerators/: LaserGenerator.cpp
Engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  main.cpp
Engine/Debug/: Logger.cpp  Logger.h
Engine/GameObject/: PhysicsObject.cpp  PhysicsObject.h  Player.cpp  Player.h  VoxelObject.cpp  VoxelObject.h
Engine/Math/: AABB.cpp  AABB.h  Color.cpp  Color.h  Noise.cpp  Noise.h  Random.cpp  Random.h  Temperature.cpp  Temperature.h  Vector.cpp  Vector.h
Engine/Physics/: ColliderGenerator.cpp  Physics.cpp  Physics.h
Engine/Registry/: GameObjectRegistry.cpp  GameObjectRegistry.h  VoxelObjectRegistry.cpp  VoxelObjectRegistry.h  VoxelRegistry.cpp  VoxelRegistry.h
Engine/Rendering/: FontRenderer.cpp  FontRenderer.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h
Engine/Shader/: ChunkShader.cpp  ChunkShader.h  GLBuffer.h  GLBuffer.inl  GLVertexArray.cpp  GLVertexArray.h  GLVertexArray.inl  Shader.cpp  Shader.h
Engine/Shader/Buffer/: GLBuffer.h  GLBuffer.inl  GLGroupStorageBuffer.cpp  GLGroupStorageBuffer.h  GLGroupStorageBuffer.inl
Engine/Shader/Computing/: ComputeShader.cpp
Engine/Shader/Computing/ComputeShaders/: ChunkHeat.comp  ChunkPressure.comp  ChunkReactions.comp  ClearOutputBuffer.comp
Engine/Shader/Includes/: ValueNoise.glsl
Engine/Shader/Rendering/: RenderingShader.cpp
Engine/Shader/Rendering/RenderShaders/: ClosedShape.frag  CursorRender.vert  ParticleArrayRender.frag  ParticleArrayRender.vert  SpriteRender.vert  TextRender.vert  VoxelArrayRender.frag
Engine/VoxelObject/: PhysicsObject.cpp  PhysicsObject.h  VoxelObject.cpp  VoxelObject.h
Engine/World/: Chunk.cpp  Chunk.h  ChunkMatrix.cpp  ChunkMatrix.h  Particle.cpp  Particle.h  ParticleGenerator.cpp  ParticleGenerator.h  Voxel.cpp  Voxel.h
Engine/World/ParticleGenerators/: LaserParticleGenerator.h
Engine/World/Particles/: BulletParticle.cpp  FallingParticle.cpp  FallingParticle.h  SolidFallingParticle.cpp  SolidFallingParticle.h
Engine/World/Voxels/: Empty.cpp  Fire.cpp  Fire.h
Files/: GameEngine.cpp  GameEngine.h  Renderer.cpp  Renderer.h  WinMain.cpp  main.cpp
Files/GameObject/: GameObject.cpp  GameObject.h  PhysicsObject.cpp  PhysicsObject.h  Player.cpp  Player.h  VoxelObject.cpp  VoxelObject.h
Files/Math/: AABB.cpp  AABB.h  Color.cpp  Color.h  FastRotation.h  Math.cpp  Math.h  Temperature.cpp  Temperature.h  Vector.cpp  Vector.h
Files/Physics/: ColliderGenerator.cpp  ColliderGenerator.h  Physics.cpp  Physics.h  Triangle.h
Files/Player/: Player.cpp  Player.h
Files/Registry/: GameObjectRegistry.cpp  GameObjectRegistry.h  VoxelRegistry.cpp  VoxelRegistry.h
Files/Rendering/: FontRenderer.cpp  FontRenderer.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h
Files/Shader/: ChunkShader.cpp  ChunkShader.h  Shader.cpp  Shader.h
Files/Shader/Computing/: ComputeShader.cpp  ComputeShader.h
Files/Shader/Computing/ComputeShaders/: ChunkHeat.comp  ChunkPressure.comp  ChunkReactions.comp  ClearOutputBuffer.comp
Files/Shader/Includes/: Directions.glsl  IndexFromLocalPos.glsl
Files/Shader/Rendering/: RenderingShader.cpp  RenderingShader.h  fragmentShaderLibrary.cpp  fragmentShaderLibrary.h  vertexShaderLibrary.cpp  vertexShaderLibrary.h
Files/Shader/Rendering/RenderShaders/: ClosedShape.frag  ClosedShape.vert  CursorRender.frag  CursorRender.vert  ParticleArrayRender.frag  SpriteRender.frag  SpriteRender.vert  TemperatureVoxelArray.frag  TemperatureVoxelArray.vert  TextRender.frag  TextRender.vert  VoxelArrayRender.vert
Files/Shader/Rendering/Shaders/: ParticleArrayRender.vert  SpriteRender.vert  TemperatureVoxelArray.vert
Files/World/: Chunk.cpp  Chunk.h  ChunkMatrix.cpp  ChunkMatrix.h  Particle.cpp  Particle.h  ParticleGenerator.cpp  ParticleGenerator.h  Voxel.cpp  Voxel.h  voxelTypes.cpp  voxelTypes.h
Files/World/ParticleGenerators/: LaserParticleGenerator.cpp  LaserParticleGenerator.h
Files/World/Particles/: BulletParticle.cpp  BulletParticle.h  FallingParticle.cpp  FallingParticle.h  SolidFallingParticle.cpp  SolidFallingParticle.h
Files/World/Voxels/: Empty.cpp  Empty.h  Fire.cpp  Fire.h
Games/Game/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Games/Game/GameObject/Player/: Player.cpp  Player.h
Games/Game/Input/: InputHandler.cpp  InputHandler.h  MouseDataHandler.h
Games/Game/Particle/ParticleGenerators/: LaserGenerator.cpp  LaserGenerator.h
Games/Game/Rendering/: ImGuiRenderer.cpp
Games/Game/Shaders/ComputeShaders/: GenChunkNoise.comp
Games/Game/Sources/SRC/: Ball.aseprite  Dirt-random-imperfections.aseprite  Grass.aseprite  Sand-random-imperfections.aseprite
Games/Game/VoxelObject/Player/: Player.cpp  Player.h
Games/Game/World/: ChunkGenerator.cpp  ChunkGenerator.h  RegisterVoxels.h
Games/Game/World/Particles/: BulletParticle.cpp  BulletParticle.h
Games/Game/World/Voxels/: Fire.cpp  Fire.h
Textures/SRC/: Ball.aseprite  Barrel.aseprite  Crate.aseprite  player.aseprite
docs/: Chunks.md  Engine.md  README.md  Registries.md  VoxelObjects.md  Voxels.md
